# pteplayer

./: .gitignore  CMakeLists.txt  README.md
.kiro/specs/image-to-gp-converter/: design.md  requirements.md  tasks.md
.kiro/steering/: product.md  structure.md  tech.md  交流规范.md
actions/: CMakeLists.txt
app/: CMakeLists.txt  PtePlayer.cpp  PtePlayer.h  PtePlayer.ui  ScoreFileLoader.cpp  ScoreFileLoader.h  SettingDialog.cpp  SettingDialog.h  SettingDialog.ui  TickPlayer.cpp  TickPlayer.h  moc_PtePlayer.cpp  paths.cpp  powertabeditor.cpp  recentfiles.cpp  recentfiles.h  scorearea.cpp  scorearea.h  viewoptions.cpp  viewoptions.h
audio/: CMakeLists.txt  midioutputdevice.cpp  midioutputdevice.h  midiplayer.cpp  midiplayer.h
dialogs/: CMakeLists.txt  alterationofpacedialog.ui  barlinedialog.h  multibarrestdialog.ui  staffdialog.h  staffdialog.ui
exec/: CMakeLists.txt  LayoutManager.cpp  LayoutManager.h  LayoutSettings.cpp  LayoutSettings.h  ScoreGroupMan.cpp  ScoreGroupMan.h  build.aps  gallery.qml  main.cpp  qtquickcontrols2.conf  resources.qrc  scorechart.cpp  scorechart.h
exec/android/: AndroidManifest.xml  android_release.keystore  build.gradle
exec/android/gradle/wrapper/: gradle-wrapper.properties
exec/icons/gallery/: index.theme
exec/pages/: PlayerSetDelegate.qml  PlayerSetModel.qml  ScorePlayer.qml
formats/: CMakeLists.txt  layoutconfig.cpp  layoutconfig.h
formats/gp7/: document.h  from_pt2.cpp  from_xml.cpp  gp7importer.cpp  gp7importer.h  to_pt2.cpp  to_pt2.h  to_xml.cpp
formats/gpx/: gpximporter.cpp
formats/guitar_pro/: gp345to7converter.cpp  guitarproimporter.cpp
image_to_gp_converter/: CMakeLists.txt  README.md
image_to_gp_converter/include/: BarlineRecognizer.h  DataStructures.h  GPConverter.h  ImageManager.h  ImagePreprocessor.h  LyricsRecognizer.h  NumberedRecognizer.h  RecognitionException.h  ScoreBuilder.h  ScoreRecognizer.h  SignatureRecognizer.h  TablatureRecognizer.h  TestComparator.h
image_to_gp_converter/src/: BarlineRecognizer.cpp  GPConverter.cpp  ImageManager.cpp  ImagePreprocessor.cpp  LyricsRecognizer.cpp  NumberedRecognizer.cpp  RecognitionException.cpp  ScoreBuilder.cpp  ScoreRecognizer.cpp  TablatureRecognizer.cpp  TestComparator.cpp  main.cpp
midi/: CMakeLists.txt  midifile.cpp  repeatcontroller.cpp  repeatcontroller.h
painters/: CMakeLists.txt  beamgroup.cpp  beamgroup.h  caretpainter.cpp  caretpainter.h  chorddiagrampainter.cpp  chorddiagrampainter.h  directions.cpp  keysignaturepainter.cpp  layoutinfo.cpp  layoutinfo.h  musicfont.h  ptepainters.pro  simpletextitem.cpp  staffpainter.cpp  stdnotationnote.cpp  stdnotationnote.h  systemrenderer.cpp  systemrenderer.h  timesignaturepainter.cpp
ptemidi/: ptemidi.cpp  ptemidi.h  ptemidi_global.h
score/: CMakeLists.txt  alternateending.h  direction.h  keysignature.cpp  keysignature.h  player.cpp  player.h  position.cpp  position.h  score.cpp  score.h  system.cpp  system.h  tuning.cpp  tuning.h
score/utils/: directionindex.cpp  directionindex.h  repeatindexer - 副本.cpp  repeatindexer.cpp  repeatindexer.h  scorepolisher.h
testcmake/: CMakeLists.txt  main.cpp
third_part/minizip-tools/: CMakeLists.txt
third_part/rtmidi/: CMakeLists.txt  RtMidi.cpp
util/: CMakeLists.txt
widgets/: CMakeLists.txt  clickablelabel.cpp  clickablelabel.h
widgets/playback/: playbackwidget.cpp  playbackwidget.h  playbackwidget.ui
